# PlateDetection

./: .gitignore  CMakeLists.txt  README.md  runConfig.sh
cvblob/: CPackConfig.cmake  CPackSourceConfig.cmake  cvBlobConfig.cmake
cvblob/cvBlob/: cvblob.cpp  cvblob.h  cvlabel.cpp
src/: Histogram.cpp  Histogram.hpp  ImageManipulation.cpp  ImageManipulation.hpp  MainShadowDetector.cpp  MainShadowDetector.hpp  MathFunctions.cpp  MathFunctions.hpp  PlateExtraction.cpp  PlateExtraction.hpp  ShadowDetector.cpp  ShadowDetector.hpp  SquareDetection.cpp  SquareDetection.hpp  TextDetection.cpp  TextDetection.hpp
